feature: hide oidc button in frontend if not enabled
