# go/api/openapi.yaml
@@ -527,6 +527,23 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
+      summary: OIDC callback
+      tags:
+        - auth
+  /api/auth/oidc/enabled:
+    get:
+      description: Returns 204 when oidc is enabled, 404 otherwise
+      operationId: oidcEnabled
+      responses:
+        "204":
+          description: No Content
+        default:
+          content:
+            application/problem+json:
+              schema:
+                $ref: "#/components/schemas/ErrorModel"
+          description: Error
+      summary: OIDC enabled check
       tags:
         - auth
   /api/auth/oidc/login:
@@ -592,6 +609,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrorModel"
           description: Error
+      summary: OIDC login
       tags:
         - auth
   /api/clients/:
